Refatoração da Interface

--- a/Clave .html
+++ b/Clave .html
@@ -7,6 +7,6 @@
 <p align='center'>Rafa Bisogno</p>
 <p align='center'>Rafael Bisogno</p>
 <p align='center'>
-   &emsp;○&emsp;●&emsp;○&emsp;○&emsp;○&emsp;○&emsp;○&emsp;○&emsp;</p><p align='center'>●&emsp;○&emsp;○&emsp;●&emsp;○&emsp;●&emsp;●&emsp;○&emsp; &emsp;</p>
+   &emsp;○&emsp;○&emsp;●&emsp;●&emsp;○&emsp;●&emsp;●&emsp;●&emsp;</p><p align='center'>●&emsp;●&emsp;●&emsp;○&emsp;●&emsp;●&emsp;○&emsp;○&emsp; &emsp;</p>
 </body>
 </html>
